--- a/sass/components/_login.scss
+++ b/sass/components/_login.scss
@@ -52,8 +52,8 @@ legend{
     text-align: center;
     margin-bottom: 10%;
     color: $vini-color;
-     font-size: $subtitulos;
-}
+    font-size: $subtitulos;
+    }
     
    
     
@@ -61,14 +61,14 @@ legend{
     margin: auto;
     padding: 2%;
     width: 50%;
-    height: 100%;
-    
-    
+    height: 90%;
+    margin-bottom: 10%;
     border-radius: 10px;
     background-color: #fff;
-  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1)
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1)
+    } 
     
-} 
+    
 
 
 
