--- a/sass/components/_login.scss
+++ b/sass/components/_login.scss
@@ -1,7 +1,15 @@
 
+.cont{
+    
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: -webkit-linear-gradient(left, $vini-color, $primary-color)
 
-
-.main-login{
+}
+/* .main-login{
     display: flex;
     flex-wrap: wrap;
     flex-flow: column;
@@ -78,13 +86,13 @@ legend{
 
 
 
-#button{
+/* #button{
     background-color:$vini-color;
 	border-radius:28px;
 	border:1px solid $primary-color;
 	display:inline-block;
 	cursor:pointer;
-	color:#ffffff;
+	color:#665d5d;
 	font-size:17px;
 	padding:16px 31px;
 	text-decoration:none;
@@ -128,4 +136,4 @@ legend{
         width: 50px;
         height: 50px;
     }
-}
+} */ 
