--- a/sass/components/_index.scss
+++ b/sass/components/_index.scss
@@ -15,7 +15,7 @@ html{
     background-size: cover;
     background-position: center;
     transition: all .1s ease-in-out;
-    background-image: url('../../imagenes/banner1.jpg');
+    background: url('../../imagenes/banner1.jpg');
     animation: banner 10s infinite linear;
 }
 
@@ -86,19 +86,19 @@ html{
 
 @keyframes banner {
     0%{
-        background-image: url('../../imagenes/banner1.jpg');
+        background: url('../../imagenes/banner1.jpg');
     }
 
     50%{
-        background-image: url('../../imagenes/banner1.jpg');
+        background: url('../../imagenes/banner1.jpg');
     }
 
     51%{
-        background-image: url('../../imagenes/banner2.jpg');
+        background: url('../../imagenes/banner2.jpg');
     }
 
     100%{
-        background-image: url('../../imagenes/banner2.jpg');
+        background: url('../../imagenes/banner2.jpg');
     }
 }
     
