--- a/sass/components/_login.scss
+++ b/sass/components/_login.scss
@@ -1,5 +1,63 @@
 
-.cont{
+.container-login{
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
+.login-form{
+    width: 40%;
+    height: 70vh;
+    background-position: center;
+    background-size: cover;
+    background-image: linear-gradient(rgba(0,0,100,0.9), rgba(0,0,100,0.9) ), url(../../imagenes/fondo.jpg);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+        h2{
+            color: #fff;
+            font-size: $subtitulos;
+            padding: 20px;
+        }
+        
+}
+
+.input-login{
+    background: transparent;
+    border: 1px solid #fff;
+    margin: 6px 0;
+    height: 32px;
+    border-radius: 20px;
+    padding: 0 10px;
+    box-sizing: border-box;
+    outline: none;
+    text-align: center;
+    color: #fff;
+}
+
+.input-login::placeholder{
+    color: rgb(227, 226, 226);
+}
+       
+.login-button{
+    background-color:$primary-color;
+	border-radius:28px;
+	border:1px solid $primary-color;
+	display:inline-block;
+	cursor:pointer;
+	color:$color-fuente;;
+	font-size: $parrafos;
+	padding:10px 50px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px $primary-color;
+    font-size: $parrafos;   
+}
+
+
+/* .cont{
     
     width: 100%;
     height: 100vh;
@@ -8,7 +66,7 @@
     align-items: center;
     background: -webkit-linear-gradient(left, $vini-color, $primary-color)
 
-}
+} */
 /* .main-login{
     display: flex;
     flex-wrap: wrap;
