--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import './components/tarjeta';
 @import './components/nosotros';
 @import './components/login';
+@import './components/registrate';
 @import './components/contacto';
 @import './components/_footer';
 
