--- a/sass/components/_tarjeta.scss
+++ b/sass/components/_tarjeta.scss
@@ -98,7 +98,7 @@
     height: 50%;
     margin-bottom: 5%;
     margin: auto;
-    
+    padding-top:10%
 }  
 
 
@@ -220,6 +220,7 @@
         
     }
 
+
    .registrate-boton h2{
         justify-content: center;
         margin: auto;
@@ -229,8 +230,8 @@
     .btn-login{
         width: 100%;
         height: 15%;
-        margin-bottom: 20px;
-        margin-top: 20px;
+        margin-bottom: 30px;
+        margin-top: 10px;
         justify-content: center;
         
     }
