--- a/sass/main.css
+++ b/sass/main.css
@@ -1276,6 +1276,7 @@ iframe{
   height: 50%;
   margin-bottom: 5%;
   margin: auto;
+  padding-top: 10%;
 }
 
 .registrate-boton {
@@ -1402,8 +1403,8 @@ iframe{
   .btn-login {
     width: 100%;
     height: 15%;
-    margin-bottom: 20px;
-    margin-top: 20px;
+    margin-bottom: 30px;
+    margin-top: 10px;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -1693,8 +1694,8 @@ iframe{
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-shadow: 1px 1px 10px -3px #1791b1;
-          box-shadow: 1px 1px 10px -3px #1791b1;
+  -webkit-box-shadow: 1px 1px 10px -3px #B80E65;
+          box-shadow: 1px 1px 10px -3px #B80E65;
   padding: 5px;
   width: 20%;
   border-radius: 3%;
@@ -1721,8 +1722,8 @@ iframe{
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-shadow: 1px 1px 10px -3px #1791b1;
-          box-shadow: 1px 1px 10px -3px #1791b1;
+  -webkit-box-shadow: 1px 1px 10px -3px #B80E65;
+          box-shadow: 1px 1px 10px -3px #B80E65;
   padding: 5px;
   width: 20%;
   border-radius: 3%;
@@ -1749,8 +1750,8 @@ iframe{
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-shadow: 1px 1px 10px -3px #1791b1;
-          box-shadow: 1px 1px 10px -3px #1791b1;
+  -webkit-box-shadow: 1px 1px 10px -3px #B80E65;
+          box-shadow: 1px 1px 10px -3px #B80E65;
   padding: 5px;
   width: 20%;
   border-radius: 3%;
@@ -1777,8 +1778,8 @@ iframe{
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-shadow: 1px 1px 10px -3px #1791b1;
-          box-shadow: 1px 1px 10px -3px #1791b1;
+  -webkit-box-shadow: 1px 1px 10px -3px #B80E65;
+          box-shadow: 1px 1px 10px -3px #B80E65;
   padding: 5px;
   width: 20%;
   border-radius: 3%;
@@ -1822,6 +1823,9 @@ iframe{
     font-size: 28px;
     text-align: justify;
   }
+  .about-us-parrafo {
+    text-align: center;
+  }
   .about-us-titulo {
     text-align: center;
   }
@@ -1839,19 +1843,15 @@ iframe{
     text-align: center;
     margin-left: 10%;
   }
-  .customer img {
+  .customer {
     width: 80%;
+    margin: auto;
+    margin-top: 40px;
   }
-  /*  .contact__form{
-            flex-flow: column wrap;
-            width: 80%;
-            
-        }
-        .contact__form-text, .fielset, .contact__form{
-        margin-top: 15%;
-            width: 100%;
-
-        } */
+  .team {
+    width: 80%;
+    margin: auto;
+  }
   .metrics {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1916,8 +1916,8 @@ iframe{
   height: 70vh;
   background-position: center;
   background-size: cover;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 100, 0.9)), to(rgba(0, 0, 100, 0.9))), url(../../imagenes/fondo.jpg);
-  background-image: linear-gradient(rgba(0, 0, 100, 0.9), rgba(0, 0, 100, 0.9)), url(../../imagenes/fondo.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 100, 0.9)), to(rgba(0, 0, 100, 0.9))), url(../imagenes/fondo.jpg);
+  background-image: linear-gradient(rgba(0, 0, 100, 0.9), rgba(0, 0, 100, 0.9)), url(../imagenes/fondo.jpg);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1931,26 +1931,70 @@ iframe{
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  border-radius: 10%;
 }
 
 .login-form h2 {
   color: #fff;
   font-size: 28px;
   padding: 20px;
+  margin-bottom: 10px;
+}
+
+.login-input-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+  padding: 20px;
+}
+
+.user-login {
+  width: 100px;
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: auto;
+  border-radius: 50%;
 }
 
 .input-login {
   background: transparent;
-  border: 1px solid #fff;
+  border: none;
+  border-bottom: 2px solid #fff;
   margin: 6px 0;
   height: 32px;
-  border-radius: 20px;
-  padding: 0 10px;
+  padding: 0 5px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   outline: none;
   text-align: center;
   color: #fff;
+  padding: 20px;
+}
+
+.input-login:focus {
+  background-color: #1C1B4D;
+}
+
+.fa-envelope, .fa-lock {
+  font-size: 20px;
+  color: #fff;
+  text-align: center;
 }
 
 .input-login::-webkit-input-placeholder {
@@ -1981,6 +2025,24 @@ iframe{
   text-decoration: none;
   text-shadow: 0px 1px 0px #B80E65;
   font-size: 16px;
+  margin-top: 30px;
+}
+
+.login-button:hover {
+  background-color: transparent;
+  border: 1px solid #fff;
+}
+
+.pass-forgot {
+  padding: 10px;
+}
+
+@media screen and (max-width: 900px) {
+  .login-form {
+    width: 80%;
+    border-radius: 2%;
+    margin: auto;
+  }
 }
 
 /* .cont{
@@ -2117,6 +2179,155 @@ legend{
         height: 50px;
     }
 } */
+.container-login {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.register-form {
+  width: 40%;
+  height: 80vh;
+  background-position: center;
+  background-size: cover;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 100, 0.9)), to(rgba(0, 0, 100, 0.9))), url(../imagenes/fondo.jpg);
+  background-image: linear-gradient(rgba(0, 0, 100, 0.9), rgba(0, 0, 100, 0.9)), url(../imagenes/fondo.jpg);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 10%;
+  margin-bottom: 5%;
+}
+
+.register-form h2 {
+  color: #fff;
+  font-size: 28px;
+  padding: 20px;
+  margin-bottom: 10px;
+}
+
+.login-input-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+  padding: 20px;
+}
+
+.user-login {
+  width: 100px;
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: auto;
+  border-radius: 50%;
+}
+
+.input-login {
+  background: transparent;
+  border: none;
+  border-bottom: 2px solid #fff;
+  margin: 6px 0;
+  height: 32px;
+  padding: 0 5px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  outline: none;
+  text-align: center;
+  color: #fff;
+  padding: 20px;
+}
+
+.input-login:focus {
+  background-color: #1C1B4D;
+}
+
+.fa-envelope, .fa-lock, .fa-user {
+  font-size: 20px;
+  color: #fff;
+  text-align: center;
+}
+
+.input-login::-webkit-input-placeholder {
+  color: #e3e2e2;
+}
+
+.input-login:-ms-input-placeholder {
+  color: #e3e2e2;
+}
+
+.input-login::-ms-input-placeholder {
+  color: #e3e2e2;
+}
+
+.input-login::placeholder {
+  color: #e3e2e2;
+}
+
+.login-button {
+  background-color: #B80E65;
+  border-radius: 28px;
+  border: 1px solid #B80E65;
+  display: inline-block;
+  cursor: pointer;
+  color: #fff;
+  font-size: 16px;
+  padding: 10px 50px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #B80E65;
+  font-size: 16px;
+  margin-top: 30px;
+}
+
+.login-button:hover {
+  background-color: transparent;
+  border: 1px solid #fff;
+}
+
+.pass-forgot {
+  padding: 8px;
+}
+
+@media screen and (max-width: 900px) {
+  .login-form {
+    width: 80%;
+    border-radius: 2%;
+    margin: auto;
+  }
+}
+
 .contact__form {
   display: -webkit-box;
   display: -ms-flexbox;
