--- a/sass/components/_registrate.scss
+++ b/sass/components/_registrate.scss
@@ -49,7 +49,7 @@
 
 .input-login{
     background: transparent;
-   border: none;
+    border: none;
     border-bottom: 2px solid #fff;
     margin: 6px 0;
     height: 32px;
@@ -103,10 +103,22 @@
 }
 
 @media screen and (max-width: 900px){
-    .login-form{
+    .register-form{
         width: 80%;
+        height: 90vh;
+        padding-top: 20px;
         border-radius: 2%;
         margin: auto;
-       
+            h2{
+                font-size: $subtitulos;
+                padding: 10px;
+                margin-bottom: 5px;
+            }
     }
+    .user-login{
+        width: 60px;
+        height: 60px;
+    }
+
+       
 }
